<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_account"
            android:title="Login" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_menu_cart"
            android:title="@string/cart" />
        <!--<item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />-->
    </group>

    <item android:title="@string/options" android:id="@+id/optionUser">
        <menu>
            <item
                android:id="@+id/nav_perfil"
                android:icon="@drawable/ic_menu_account"
                android:title="@string/perfil" />
            <item
                android:id="@+id/nav_report"
                android:icon="@drawable/ic_menu_list"
                android:title="@string/report" />
        </menu>
    </item>

</menu>
