<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.saude.maxima.PaymentConclusionActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.saude.maxima.PaymentConclusionActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <TextView
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finished_order"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:weightSum="2">

            <TableRow
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/package_name" />

                <TextView
                    android:id="@+id/package_name"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="----------------------" />
            </TableRow>

            <TableRow
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/package_value" />

                <TextView
                    android:id="@+id/package_value"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="-------------------------" />
            </TableRow>

            <TableRow
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/scheduled_date" />

                <TextView
                    android:id="@+id/scheduled_date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="99/99/999 99:99" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/black" />

            <TableRow
                android:padding="10dp">

                <TextView
                    android:textSize="20dp"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="@string/local"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

            </TableRow>

            <!-- Academia -->
            <TableRow
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/gym" />

                <TextView
                    android:id="@+id/gym"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="-------------------------" />
            </TableRow>

            <!-- Cidade -->
            <TableRow
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/city" />

                <TextView
                    android:id="@+id/city"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="-------------------------" />
            </TableRow>


            <!-- Endereço -->
            <TableRow
                android:padding="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="-------------------------" />
            </TableRow>

            <!-- Bairro -->
            <TableRow
                android:padding="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/district" />

                <TextView
                    android:id="@+id/district"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="-------------------------" />
            </TableRow>

            <!-- CEP -->
            <TableRow
                android:padding="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/zip" />

                <TextView
                    android:id="@+id/zip"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="-------------------------" />
            </TableRow>

            <!-- Estado -->
            <TableRow
                android:padding="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/state" />

                <TextView
                    android:id="@+id/state"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="-------------------------" />
            </TableRow>


        </TableLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="0dp"
                android:onClick="dashboard"
                android:id="@+id/dashboard"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/go_to_dashboard"/>
            <Button
                android:layout_width="0dp"
                android:onClick="home"
                android:id="@+id/home"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/go_to_home"/>
        </LinearLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="invisible" />

</ScrollView>
