<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="5dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:padding="15dp"
            android:gravity="center_vertical">
            <TextView
                android:textColor="@color/black"
                android:textSize="20dp"
                android:id="@+id/notifications"
                android:onClick="logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifications"/>
        </TableRow>

        <View android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/black"></View>
        
        <TableRow
            android:padding="15dp"
            android:gravity="center_vertical">
            <TextView
                android:textColor="@color/black"
                android:textSize="20dp"
                android:id="@+id/terms"
                android:onClick="logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms"/>
        </TableRow>

        <View android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/black"></View>

        <TableRow
            android:padding="15dp"
            android:gravity="center_vertical">
            <TextView
                android:textColor="@color/black"
                android:textSize="20dp"
                android:id="@+id/help"
                android:onClick="logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help"/>
        </TableRow>

        <View android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/black"></View>

        <TableRow
            android:padding="15dp"
            android:gravity="center_vertical">
            <TextView
                android:textColor="@color/black"
                android:textSize="20dp"
                android:id="@+id/about_us"
                android:onClick="logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us"/>
        </TableRow>

        <View android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/black"></View>

        <TableRow
            android:padding="15dp"
            android:gravity="center_vertical">
            <TextView
                android:textColor="@color/black"
                android:textSize="20dp"
                android:id="@+id/logout"
                android:onClick="logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"/>
        </TableRow>

    </TableLayout>

</LinearLayout>